[metadata]
name = sortedcontainers
version = attr: sortedcontainers.__version__
description = Sorted containers -- Sorted List, Sorted Dict, Sorted Set
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Grant Jenks
author_email = contact@grantjenks.com
url = http://www.grantjenks.com/docs/sortedcontainers/
license = Apache 2.0
license_files = LICENSE
python_requires = >=2.7, !=3.0.*, !=3.1.*
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = sortedcontainers
